--- a/finalPrjAm/src/main/resources/templates/thymeleaf/thymeleafLinkTest.html
+++ b/finalPrjAm/src/main/resources/templates/thymeleaf/thymeleafLinkTest.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="ko">
 <head>
   <meta charset="UTF-8">
   <title>Title</title>
 </head>
 <body>
-<h1>Thymeleaf 링크 테스트</h1>
+<h1>타임리프 링크 테스트</h1>
 <div>
-  <a th:href="@{/thymeleaf/item-list}">상품 리스트 출력 이동</a>
+  <a th:href="@{/thymeleaf/item-list}">상품 리스트 출력으로 이동</a>
 </div>
 <div>
-  <a th:href="@{https://www.naver.com}">네이버 이동</a>
+  <a th:href="@{https://naver.com}">네이버로 이동</a>
 </div>
 <div>
-  <a th:href="@{/thymeleaf/ex06(param1 = '파라미터 데이터1', param2 = '파라미터 데이터2')}">thymeleaf 파라미터 전달 테스트 </a>
+  <a th:href="@{/thymeleaf/link-param(param1 = '파라미터 1번 입니다.', param2 = '파라미터 2번 입니다.')}">파라미터 전달 테스트</a>
 </div>
+
 </body>
 </html>
